[gd_scene load_steps=5 format=3 uid="uid://c6hturg000ipu"]

[ext_resource type="Script" uid="uid://byfcbqxo5yseq" path="res://start_screen.gd" id="1_ncxyx"]
[ext_resource type="PackedScene" uid="uid://b11c55gvf6hgc" path="res://info_popup_panel.tscn" id="2_afy8x"]
[ext_resource type="AudioStream" uid="uid://clkxtg5pyh1bh" path="res://ominous-soundscape-321105.mp3" id="2_k1na2"]
[ext_resource type="PackedScene" uid="uid://m4edhyiwteja" path="res://popup_panel.tscn" id="3_k1na2"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ncxyx")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k1na2")
volume_db = -15.0
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Get Me Out"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="TutorialButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Tutorial"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="InfoPopup" parent="." instance=ExtResource("2_afy8x")]
visible = false

[node name="TutorialPopup" parent="." instance=ExtResource("3_k1na2")]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 10.0
value = -20.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="closed" from="InfoPopup" to="." method="_on_info_popup_closed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
